# amux

./: .gitignore  Cargo.toml  README.md  index.html  package.json  vite.config.ts  windows_install.md
.github/workflows/: release.yml
crates/amux-cli/: Cargo.toml
crates/amux-cli/src/: main.rs
crates/amux-core/: Cargo.toml
crates/amux-core/src/: engine.rs  layout.rs  lib.rs  notify.rs  osc.rs  pane.rs  server.rs  term_state.rs
crates/amux-core/src/meta/: cwd.rs  git.rs  mod.rs  ports.rs
crates/amux-protocol/: Cargo.toml
crates/amux-protocol/src/: lib.rs
crates/cmux-cli/: Cargo.toml
crates/cmux-cli/src/: main.rs
crates/cmux-core/: Cargo.toml
crates/cmux-core/src/: engine.rs  layout.rs  lib.rs  notify.rs  pane.rs  server.rs  term_state.rs
crates/cmux-core/src/meta/: mod.rs
crates/cmux-protocol/: Cargo.toml
crates/cmux-protocol/src/: lib.rs
docs/: claude-hooks.md
scripts/: install-claude-hooks.py
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/lib/: AttentionRail.svelte  Dashboard.svelte  Palette.svelte  PaneView.svelte  Sidebar.svelte  SplitNode.svelte  Terminal.svelte  ipc.ts  keymap.ts  settings.svelte.ts  state.svelte.ts  themes.ts
