[package]
name = "cmux-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "cmux for Ubuntu: a terminal for running AI coding agents in parallel"

[lib]
name = "cmux_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cmux-core = { workspace = true }
cmux-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.5.4"
