[package]
name = "amux-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for controlling amux over its Unix socket"

[[bin]]
name = "amux"
path = "src/main.rs"

[dependencies]
amux-protocol = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
