[package]
name = "amux-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Engine for amux: PTY management, terminal state, metadata, notifications, socket server"

[dependencies]
amux-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
indexmap = { workspace = true }
portable-pty = "0.9.0"
alacritty_terminal = "0.26.0"
notify-rust = "4.17.0"
