[package]
name = "cmux-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for controlling cmux-ubuntu over its Unix socket"

[[bin]]
name = "cmux"
path = "src/main.rs"

[dependencies]
cmux-protocol = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
